--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <!-- Cabeçalho com logo e título -->
     <div class="header">
-        <img src="https://img.linkme.bio/img/2022/09/07094632/aaa-3-300x300.png" alt="Logo IPRSM" class="logo">
+        <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
         <h2>IPRSM - Formulario Membresia</h2>
     </div>
 
