--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
             <option value="Diácono(a)">Diácono(a)</option>
             <option value="Missionário(a)">Missionário(a)</option>
             <option value="Membro">Membro</option>
-        </select>
+        </select><br>
 
         <!-- Adicionando as caixas de seleção acima do campo Foto -->
         <label>
             <input type="checkbox" id="dizimista"> Dizimista
-        </label><br>
+        </label>
 
         <label>
             <input type="checkbox" id="ebenezer"> Ebenezer
