--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
         /* Layout da carteirinha */
         .card {
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
             justify-content: flex-start;
             width: 600px;
             height: 220px;
@@ -103,6 +102,7 @@
             border-radius: 10px;
             color: #f1f1f1;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            border: 5px solid #fff; /* Borda branca ao redor da carteirinha */
         }
 
         .card-header {
@@ -131,11 +131,11 @@
             height: 100px;
             object-fit: cover;
             margin-top: 10px;
+            margin-right: 15px; /* Distância entre a foto e os dados */
         }
 
         .card-info {
             flex-grow: 1;
-            margin-left: 15px;
         }
 
         .card-info p {
