--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
             <option value="Diácono(a)">Diácono(a)</option>
             <option value="Missionário(a)">Missionário(a)</option>
             <option value="Membro">Membro</option>
-        </select>
+        </select><br>
 
         <!-- Adicionando as caixas de seleção acima do campo Foto -->
         <label>
             <input type="checkbox" id="dizimista"> Dizimista
-        </label><br>
+        </label>
 
         <label>
             <input type="checkbox" id="ebenezer"> Ebenezer
@@ -200,7 +200,7 @@
         <div class="card-header">
             <img src="https://i.imgur.com/naHMr26.png" alt="Logo" />
             <h3>IGREJA PRESBITERIANA RENOVADA DE SÃO MIGUEL</h3>
-        </div>
+        </div><br><br>
         <img id="cardImage" src="" alt="Foto" />
         <div class="card-info">
             <p><strong>Nome:</strong> <span id="cardName"></span></p>
