--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
         <input type="text" id="name" required><br>
 
         <label for="dob">Data de Nascimento:</label>
-        <input type="date" id="dob" required>
+        <input type="date" id="dob" required><br>
 
         <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" required placeholder="XXX.XXX.XXX-XX">
+        <input type="text" id="cpf" required placeholder="XXX.XXX.XXX-XX"><br>
 
         <label for="phone">Telefone:</label>
-        <input type="tel" id="phone" required placeholder="(XX) XXXXX-XXXX">
+        <input type="tel" id="phone" required placeholder="(XX) XXXXX-XXXX"><br>
 
         <label for="address">Endereço:</label>
-        <input type="text" id="address" required>
+        <input type="text" id="address" required><br>
 
         <label for="baptismDate">Data de Batismo:</label>
-        <input type="date" id="baptismDate" required>
+        <input type="date" id="baptismDate" required><br>
 
         <label for="position">Função:</label>
         <select id="position" required>
