--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <!-- Cabeçalho com logo e título -->
     <div class="header">
         <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
-        <h2>IPRSM - Formulario Membresia</h2>
+        <h2>Cadastro de Membros</h2>
     </div>
 
     <form id="idForm">
